--- a/index.html
+++ b/index.html
@@ -50,22 +50,22 @@
 
     <div class="menu-section">
       <h2>Starters</h2>
-      <img src="images/food1.jpg" alt="Starters Menu" class="menu-image" />
+      <img src="food1.jpg" alt="Starters Menu" class="menu-image" />
     </div>
 
     <div class="menu-section">
       <h2>Main Course</h2>
-      <img src="images/food2.jpg" alt="Main Course Menu" class="menu-image" />
+      <img src="food2.jpg" alt="Main Course Menu" class="menu-image" />
     </div>
 
     <div class="menu-section">
       <h2>Desserts</h2>
-      <img src="images/food3.png" alt="Desserts Menu" class="menu-image" />
+      <img src="food3.png" alt="Desserts Menu" class="menu-image" />
     </div>
 
     <div class="menu-section">
       <h2>Desserts</h2>
-      <img src="images/food4.jpg" alt="Dinner Menu" class="menu-image" />
+      <img src="food4.jpg" alt="Dinner Menu" class="menu-image" />
     </div>
   </div>
 
