--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     </div>
 
     <div class="menu-section">
-      <h2>Desserts</h2>
+      <h2>Dinner</h2>
       <img src="food4.jpg" alt="Dinner Menu" class="menu-image" />
     </div>
   </div>
